@@ -1,4 +1,8 @@
 master
+- Mayhem
+  Added thread creation QR cooldown.
+  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
+  Fix /q/ QR cooldowns.
 
 2.35.4
 - Mayhem
